[tool.poetry]
authors = ["Jerry Ng <ngshiheng@gmail.com>"]
description = "Web crawler for Burplist, a search engine or craft beers in Singapore"
name = "burplist"
version = "1.11.11"

[tool.poetry.dependencies]
SQLAlchemy = "==1.4.52"
Scrapy = "==2.11.1"
alembic = "==1.13.1"
colorlog = "==6.8.2"
ipython = "==8.23.0"
price-parser = "0.3.4"
psycopg2-binary = "==2.9.9"
python = "^3.10"
scrapeops-scrapy = "0.5.4"
scrapy-fake-useragent = "1.4.4"
sentry-sdk = "==1.44.0"

[tool.poetry.dev-dependencies]
autopep8 = "==2.1.0"
flake8 = "==7.0.0"
mypy = "1.9.0"
pre-commit = "==3.7.0"
pylint = "==3.1.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
ignore_missing_imports = true
mypy_path = "burplist"
no_implicit_optional = true
no_implicit_reexport = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true

[tool.black]
line-length = 150

[tool.isort]
extra_standard_library = ["toml"]
line_length = 150
profile = "black"

[tool.semantic_release]
branch = "main"
build_command = "pip install poetry && poetry build"
upload_to_pypi = false
upload_to_release = true
version_variable = [
  "burplist/__init__.py:__version__",
  "pyproject.toml:version",
]
